crates/vm/src/snapshots/mu_vm__tests__call_closure.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn a():
  v := 10
  fn b():
    print v
  return b

a()()


# Result (success):
none

# Stdout:
10

