crates/vm/src/snapshots/mu_vm__tests__class_def-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
class U: pass
class T(U): pass
print T


# Result (success):
none

# Stdout:
<class def T>

