crates/vm/src/snapshots/mu_vm__tests__class_def-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 10

t0 = T()
t1 = T(v=20)

print t0.v, t1.v


# Result (success):
none

# Stdout:
10 20

