crates/vm/src/snapshots/mu_vm__tests__class_def.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
class T: pass
print T


# Result (success):
none

# Stdout:
<class def T>

