crates/vm/src/snapshots/mu_vm__tests__class_inheritance.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
class A:
  v = 0
  fn test(self):
    print "A", self.v
class B(A):
  v = 1
  fn test(self):
    super.test()
    print "B", self.v
class C(B):
  v = 2
  fn test(self):
    super.test()
    print "C", self.v

A().test()
B().test()
C().test()


# Result (success):
none

# Stdout:
"A" 0
"A" 1
"B" 1
"A" 2
"B" 2
"C" 2

