crates/vm/src/snapshots/mu_vm__tests__class_methods-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
class T:
  fn test():
    print "test"

T.test()


# Result (success):
none

# Stdout:
"test"

