crates/vm/src/snapshots/mu_vm__tests__fn_call-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b, c):
  print a, b, c

f(0, 1, 2)
f(0, 1, 2)


# Result (success):
none

# Stdout:
0 1 2
0 1 2

