crates/vm/src/snapshots/mu_vm__tests__fn_call-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b, c):
  print a, b, c

f()


# Result (error):
[31merror[0m in code: missing required positional params: a, b, c


# Stdout:

